--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
+	"keywords": [
+		"obsidian",
+		"plugin"
+	],
 	"author": "Iulian Onofrei",
 	"license": "MIT",
 	"devDependencies": {
