--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "parser": "@typescript-eslint/parser",
     "env": { "node": true },
     "plugins": [
+      "@stylistic/eslint-plugin-js",
       "@typescript-eslint"
     ],
     "extends": [
@@ -18,6 +19,7 @@
       "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
       "@typescript-eslint/ban-ts-comment": "off",
       "no-prototype-builtins": "off",
-      "@typescript-eslint/no-empty-function": "off"
-    } 
+      "@typescript-eslint/no-empty-function": "off",
+      "@stylistic/js/semi": ["error", "always"]
+    }
   }
