--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 	"author": "Iulian Onofrei",
 	"license": "MIT",
 	"devDependencies": {
+		"@stylistic/eslint-plugin-js": "1.6.2",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"eslint": "8.56.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
